@startuml

title __STABLE_FRAGMENT's Class Diagram__\n

  namespace com.example.stable_fragment {
    class com.example.stable_fragment.BlankFragment {
        {static} - ARG_PARAM1 : String
        {static} - ARG_PARAM2 : String
        - changeSchoolButton : Button
        - fragment : View
        - mParam1 : String
        - mParam2 : String
        - majorListView : ListView
        - majorTitleView : TextView
        + BlankFragment()
        {static} + newInstance()
        + onCreate()
        + onCreateView()
    }
  }
  

  namespace com.example.stable_fragment {
    class com.example.stable_fragment.MainActivity {
        - majorFragment : Fragment
        - majorListView : ListView
        - majorTitleView : TextView
        - schoolCodeList : String[]
        - schoolListView : ListView
        - schoolNameList : String[]
        - schoolTitleView : TextView
        # onCreate()
        - bindData()
        - bindEvent()
        - initData()
        - initView()
    }
  }
  

  com.example.stable_fragment.BlankFragment -up-|> androidx.fragment.app.Fragment
  com.example.stable_fragment.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
